--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^5.11",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.0",
         "meilisearch/meilisearch-php": "^1.5"
     },
     "require-dev": {
